--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </header>
 
     <main>
-      <section class="new-form collapsed">
+      <section class="js-new-form collapsed">
         <h2 class="title">¿Agregamos un nuevo gatito a Adalab?</h2>
         <form class="form">
           <input
@@ -77,7 +77,7 @@
       </section>
 
       <section class="data">
-        <ul class="list">
+        <ul class="js-list">
           <li class="card">
             <article>
               <img
