--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <nav class="menu-nav">
           <ul class="menu">
             <li class="item">
-              <span class="fas fa-plus-circle"> </span>
+              <span class="fas fa-plus-circle js-fas"> </span>
             </li>
           </ul>
         </nav>
@@ -37,7 +37,7 @@
     </header>
 
     <main>
-      <section class="js-new-form collapsed">
+      <section class="new-form js-new-form collapsed">
         <h2 class="title">¿Agregamos un nuevo gatito a Adalab?</h2>
         <form class="form">
           <input
@@ -78,7 +78,7 @@
 
       <section class="data">
         <ul class="js-list">
-          <li class="card">
+          <!-- <li class="card">
             <article>
               <img
                 class="card_img"
@@ -119,7 +119,7 @@
               Ruiseño, juguetón, le guta estar tranquilo y que nadie le moleste.
               Es una maravilla acariciarle!
             </p>
-          </li>
+          </li> -->
         </ul>
       </section>
     </main>
